Update access resources to new model
